trunk/tests/should-not-compile/return-null-from-real-function.talc
// EXPECTED ERROR: return expression has type null-type but must be assignable to real
function real f() { return null; }
